k8s/istio/lbandsessionkeep/provider-normal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: normal-service-provider-svc
spec:
  type: NodePort
  ports:
    - name: http-server
      nodePort: 31001
      port: 8089
      targetPort: 8089
    - name: http-management
      nodePort: 31002
      port: 8090
      targetPort: 8090
  selector:
    app: lb-normal-service-provider-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: normal-service-provider-app-v1
  labels:
    app: lb-normal-service-provider-app
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lb-normal-service-provider-app
  template:
    metadata:
      name: normal-service-provider-pod
      labels:
        app: lb-normal-service-provider-app
        version: v1
    spec:
      restartPolicy: Always
      containers:
        - name: normal-service-provider-container
          image: 10.0.2.7:5000/normal-service-provider:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8089
              name: server
            - containerPort: 8090
              name: management
          #resources:
           # limits:
           #   memory: 1000Mi
           #   cpu: 1000m
           # requests:
           #   memory: 500Mi
           #   cpu: 500m
