k8s/istio/lbandsessionkeep/provider-normal-subset-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: normal-service-provider-svc-dr 
spec:
  host: normal-service-provider-svc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
        #simple: RANDOM
        #consistentHash:
        #  httpCookie:
        #    name: user
        #    ttl: 60s
  - name: v2
    labels:
      version: v2
